[package]
name = "mkb"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
walkdir = "2.4"
colored = "2.1"
unicode-segmentation = "1.10"
anyhow = "1.0"
dirs = "5.0"