[package]
name = "mkb"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.2", features = ["json"] }
walkdir = "2.4"
colored = "3.1.1"
unicode-segmentation = "1.10"
anyhow = "1.0"
dirs = "6.0"
bincode = "1.3.3"
rayon = "1.8" # 并行计算库